Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -1,415 +1,391 @@
 @article{DeloneMcLean2003ISSuccessTenYearUpdate,
-    author  = {DeLone, William H. and McLean, Ephraim R.},
-    title   = {The {DeLone} and {McLean} model of information systems success: A ten-year update},
-    journal = {Journal of Management Information Systems},
-    year    = {2003},
-    volume  = {19},
-    number  = {4},
-    pages   = {9--30},
-    doi     = {10.1080/07421222.2003.11045748}
+  author  = {DeLone, W. H. and McLean, E. R.},
+  title   = {The {DeLone} and {McLean} model of information systems success: {A} ten-year update},
+  journal = {Journal of Management Information Systems},
+  year    = {2003},
+  volume  = {19},
+  number  = {4},
+  pages   = {9--30},
+  doi     = {10.1080/07421222.2003.11045748}
 }
 
 @article{DeloneMcLean1992ISSuccess,
-    author = {William H. DeLone and Ephraim R. McLean},
-    doi = {10.1287/isre.3.1.60},
-    issn = {15265536},
-    issue = {1},
-    journal = {Information Systems Research},
-    keywords = {Information systems assessment,Information systems success,Measurement},
-    pages = {60--95},
-    publisher = {INFORMS Inst.for Operations Res.and the Management Sciences},
-    title = {Information systems success: The quest for the dependent variable},
-    volume = {3},
-    year = {1992}
+  author  = {DeLone, W. H. and McLean, E. R.},
+  title   = {Information systems success: {The} quest for the dependent variable},
+  journal = {Information Systems Research},
+  year    = {1992},
+  volume  = {3},
+  number  = {1},
+  pages   = {60--95},
+  doi     = {10.1287/isre.3.1.60},
+  issn    = {15265536}
 }
 
 @online{Brandt2023,
-    author    = {Brandt, Mathias},
-    year      = {2023},
-    month     = {jul},
-    day       = {7},
-    title     = {Wie lange brauchen {Online-Dienste}, um eine Million Menschen zu erreichen?},
-    publisher = {Statista},
-    url       = {https://de.statista.com/infografik/29195/zeitraum-den-online-dienste-gebraucht-haben-um-eine-million-nutzer-zu-erreichen/},
-    urldate   = {2025-07-31}
+  author    = {Brandt, M.},
+  year      = {2023},
+  month     = {jul},
+  title     = {Wie lange brauchen {Online-Dienste}, um eine Million Menschen zu erreichen?},
+  publisher = {Statista},
+  url       = {https://de.statista.com/infografik/29195/zeitraum-den-online-dienste-gebraucht-haben-um-eine-million-nutzer-zu-erreichen/},
+  urldate   = {2025-07-31}
 }
 
 @online{Huber2025,
-    author    = {Huber, Sandro},
-    year      = {2025},
-    month     = {jun},
-    title     = {{ChatGPT} Nutzerzahlen (Stand Juni 2025)},
-    publisher = {SH Digital},
-    url       = {https://www.sh-digital.ch/blog/chatgpt-nutzerzahlen},
-    urldate   = {2025-07-31}
+  author    = {Huber, S.},
+  year      = {2025},
+  month     = {jun},
+  title     = {{ChatGPT} Nutzerzahlen ({S}tand {J}uni 2025)},
+  publisher = {SH Digital},
+  url       = {https://www.sh-digital.ch/blog/chatgpt-nutzerzahlen},
+  urldate   = {2025-07-31}
 }
 
 @online{McKinsey2023,
-    author    = {{McKinsey {\&} Company}},
-    year      = {2023},
-    month     = {nov},
-    title     = {{GenAI's} implications for {Germany's} labor market},
-    publisher = {McKinsey \& Company},
-    url       = {https://www.mckinsey.com/de/~/media/mckinsey/locations/europe%20and%20middle%20east/deutschland/news/presse/2023/2023-11-24%20genai%20implikationen%20deutschlands%20arbeitsmarkt/en_mckinsey_genai_implications_germany_labor_market.pdf}
+  author  = {{McKinsey \& Company}},
+  year    = {2023},
+  month   = {nov},
+  title   = {{GenAI's} implications for {Germany's} labor market},
+  url     = {https://www.mckinsey.com/de/~/media/mckinsey/locations/europe%20and%20middle%20east/deutschland/news/presse/2023/2023-11-24%20genai%20implikationen%20deutschlands%20arbeitsmarkt/en_mckinsey_genai_implications_germany_labor_market.pdf}
 }
 
 @online{GoogleCloudRAG,
-    author  = {{Google Cloud}},
-    title   = {What is retrieval-augmented generation ({RAG})?},
-    url     = {https://cloud.google.com/use-cases/retrieval-augmented-generation},
-    urldate = {2025-07-31}
+  author  = {{Google Cloud}},
+  year    = {2025},
+  title   = {What is retrieval-augmented generation ({RAG})?},
+  url     = {https://cloud.google.com/use-cases/retrieval-augmented-generation},
+  urldate = {2025-07-31}
 }
 
 @misc{Bruckhaus2024RAG,
-      title={RAG Does Not Work for Enterprises}, 
-      author={Tilmann Bruckhaus},
-      year={2024},
-      eprint={2406.04369},
-      archivePrefix={arXiv},
-      primaryClass={cs.SE},
-      url={https://arxiv.org/abs/2406.04369}, 
+  title         = {{RAG} Does Not Work for Enterprises},
+  author        = {Bruckhaus, T.},
+  year          = {2024},
+  eprint        = {2406.04369},
+  archivePrefix = {arXiv},
+  primaryClass  = {cs.SE},
+  url           = {https://arxiv.org/abs/2406.04369}
 }
 
-@inproceedings{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024,
-    author    = {Barnett, Scott and Kurniawan, Stefanus and Thudumu, Srikanth and Brannelly, Zach and Abdelrazek, Mohamed},
-    title     = {Seven failure points when engineering a retrieval augmented generation system},
-    booktitle = {Proceedings of the {IEEE/ACM} 3rd International Conference on {AI} Engineering - Software Engineering for {AI}},
-    year      = {2024},
-    month     = {apr},
-    pages     = {88--98},
-    doi       = {10.1145/3644815.3644945}
+@inproceedings{Barnett2024,
+  author    = {Barnett, S. and Kurniawan, S. and Thudumu, S. and Brannelly, Z. and Abdelrazek, M.},
+  title     = {Seven failure points when engineering a retrieval augmented generation system},
+  booktitle = {Proceedings of the {IEEE/ACM} 3rd International Conference on {AI} Engineering - Software Engineering for {AI}},
+  year      = {2024},
+  month     = {apr},
+  pages     = {88--98},
+  doi       = {10.1145/3644815.3644945}
 }
 
-@inproceedings{Es_James_Espinosa_Anke_Schockaert_2024,
-    author    = {Es, Shahul and James, Jithin and Espinosa-Anke, Luis and Schockaert, Steven},
-    title     = {{Ragas}: Automated evaluation of retrieval augmented generation},
-    booktitle = {Proceedings of the 18th Conference of the European Chapter of the Association for Computational Linguistics: System Demonstrations},
-    year      = {2024},
-    month     = {mar},
-    pages     = {121--130},
-    doi       = {10.18653/v1/2024.eacl-demo.16}
+@inproceedings{Es2024,
+  author    = {Es, S. and James, J. and Espinosa-Anke, L. and Schockaert, S.},
+  title     = {{Ragas}: Automated evaluation of retrieval augmented generation},
+  booktitle = {Proceedings of the 18th Conference of the European Chapter of the Association for Computational Linguistics: System Demonstrations},
+  year      = {2024},
+  month     = {mar},
+  pages     = {121--130},
+  doi       = {10.18653/v1/2024.eacl-demo.16}
 }
 
-@inproceedings{Saad_Falcon_Khattab_Potts_Zaharia_2024,
-    author    = {Saad-Falcon, Jon and Khattab, Omar and Potts, Christopher and Zaharia, Matei},
-    title     = {{Ares}: An automated evaluation framework for retrieval-augmented generation systems},
-    booktitle = {Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 1: Long Papers)},
-    year      = {2024},
-    month     = {jun},
-    pages     = {216--235},
-    doi       = {10.18653/v1/2024.naacl-long.20}
+@inproceedings{Saad-Falcon2024,
+  author    = {Saad-Falcon, J. and Khattab, O. and Potts, C. and Zaharia, M.},
+  title     = {{Ares}: An automated evaluation framework for retrieval-augmented generation systems},
+  booktitle = {Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 1: Long Papers)},
+  year      = {2024},
+  month     = {jun},
+  pages     = {216--235},
+  doi       = {10.18653/v1/2024.naacl-long.20}
 }
 
 @article{Davis1989,
-    author  = {Davis, Fred D.},
-    title   = {Perceived usefulness, perceived ease of use, and user acceptance of information technology},
-    journal = {MIS Quarterly},
-    year    = {1989},
-    volume  = {13},
-    number  = {3},
-    pages   = {319--340},
-    doi     = {10.2307/249008}
+  author  = {Davis, F. D.},
+  title   = {Perceived usefulness, perceived ease of use, and user acceptance of information technology},
+  journal = {MIS Quarterly},
+  year    = {1989},
+  volume  = {13},
+  number  = {3},
+  pages   = {319--340},
+  doi     = {10.2307/249008}
 }
 
 @article{Jennex2006,
-    author  = {Jennex, Murray E. and Olfman, Lorne},
-    title   = {A model of knowledge management success},
-    journal = {International Journal of Knowledge Management (IJKM)},
-    year    = {2006},
-    volume  = {2},
-    number  = {3},
-    pages   = {51--68},
-    doi     = {10.4018/jkm.2006070104}
+  author  = {Jennex, M. E. and Olfman, L.},
+  title   = {A model of knowledge management success},
+  journal = {International Journal of Knowledge Management (IJKM)},
+  year    = {2006},
+  volume  = {2},
+  number  = {3},
+  pages   = {51--68},
+  doi     = {10.4018/jkm.2006070104}
 }
 
-@article{Davenport1998,
-    author = {Thomas H Davenport},
-    doi = {10.1145/348772.348775},
-    title = {Working Knowledge: How Organizations Manage What They Know},
-    url = {http://www.acm.org/ubiquity/book/t_davenport_1.html},
-    year = {1998}
+@book{Davenport1998,
+  author    = {Davenport, T. H.},
+  title     = {Working Knowledge: How Organizations Manage What They Know},
+  year      = {1998},
+  publisher = {Harvard Business Press},
+  doi       = {10.1145/348772.348775}
 }
 
 @article{Jennex2006WhatIsKM,
-    author  = {Jennex, Murray E.},
-    year    = {2006},
-    title   = {What is knowledge management?},
-    journal = {International Journal of Knowledge Management},
-    volume  = {2},
-    number  = {1}
+  author  = {Jennex, M. E.},
+  year    = {2006},
+  title   = {What is knowledge management?},
+  journal = {International Journal of Knowledge Management},
+  volume  = {2},
+  number  = {1}
 }
 
 @article{Alavi2001,
-    author = {Maryam Alavi and Dorothy E. Leidner},
-    doi = {10.2307/3250961},
-    issn = {02767783},
-    issue = {1},
-    journal = {MIS Quarterly: Management Information Systems},
-    pages = {107--136},
-    publisher = {University of Minnesota},
-    title = {Review: Knowledge management and knowledge management systems: Conceptual foundations and research issues},
-    volume = {25},
-    year = {2001}
+  author  = {Alavi, M. and Leidner, D. E.},
+  title   = {Review: {K}nowledge management and knowledge management systems: {C}onceptual foundations and research issues},
+  journal = {MIS Quarterly: Management Information Systems},
+  year    = {2001},
+  volume  = {25},
+  number  = {1},
+  pages   = {107--136},
+  doi     = {10.2307/3250961},
+  issn    = {02767783}
 }
 
-@online{dennis:2025,
-  author    = {Dennis, Michael Aaron},
+@online{Dennis2025,
+  author    = {Dennis, M. A.},
   year      = {2025},
   title     = {Marvin {Minsky}},
   publisher = {Encyclopedia Britannica},
   urldate   = {2025-08-01},
-  url       = {https://www.britannica.com/biography/Marvin-Minsky},
+  url       = {https://www.britannica.com/biography/Marvin-Minsky}
 }
 
-@misc{minsky:original,
-  author = {Minsky, Marvin},
+@misc{Minsky1966,
+  author = {Minsky, M.},
   year   = {1966},
-  title  = {Title of Original Work if Known},
+  title  = {Title of Original Work if Known}
 }
 
 @article{Lund2023,
-    author  = {Lund, Brady D. and Wang, Ting and Mannuru, Nishith Reddy and Nie, Bing and Shimray, Somipam and Wang, Ziang},
-    title   = {{ChatGPT} and a new academic reality: {AI}-written research papers and the ethics of the large language models in scholarly publishing},
-    journal = {Journal of the Association for Information Science and Technology},
-    year    = {2023},
-    volume  = {74},
-    number  = {5},
-    pages   = {570--581},
-    doi     = {10.1002/asi.24793}
+  author  = {Lund, B. D. and Wang, T. and Mannuru, N. R. and Nie, B. and Shimray, S. and Wang, Z.},
+  title   = {{ChatGPT} and a new academic reality: {AI-written} research papers and the ethics of the large language models in scholarly publishing},
+  journal = {Journal of the Association for Information Science and Technology},
+  year    = {2023},
+  volume  = {74},
+  number  = {5},
+  pages   = {570--581},
+  doi     = {10.1002/asi.24793}
 }
 
 @inproceedings{Lewis2020,
-      author = {Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K\"{u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt\"{a}schel, Tim and Riedel, Sebastian and Kiela, Douwe},
-      booktitle = {Advances in Neural Information Processing Systems},
-      editor = {H. Larochelle and M. Ranzato and R. Hadsell and M.F. Balcan and H. Lin},
-      pages = {9459--9474},
-      publisher = {Curran Associates, Inc.},
-      title = {Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks},
-      url = {https://proceedings.neurips.cc/paper_files/paper/2020/file/6b493230205f780e1bc26945df7481e5-Paper.pdf},
-      volume = {33},
-      year = {2020}
+  author    = {Lewis, P. and Perez, E. and Piktus, A. and Petroni, F. and Karpukhin, V. and Goyal, N. and K\"{u}ttler, H. and Lewis, M. and Yih, W. and Rockt\"{a}schel, T. and Riedel, S. and Kiela, D.},
+  booktitle = {Advances in Neural Information Processing Systems},
+  editor    = {Larochelle, H. and Ranzato, M. and Hadsell, R. and Balcan, M.F. and Lin, H.},
+  pages     = {9459--9474},
+  publisher = {Curran Associates, Inc.},
+  title     = {Retrieval-Augmented Generation for {Knowledge-Intensive} {NLP} Tasks},
+  url       = {https://proceedings.neurips.cc/paper_files/paper/2020/file/6b493230205f780e1bc26945df7481e5-Paper.pdf},
+  volume    = {33},
+  year      = {2020}
 }
 
 @online{AWS_RAG,
-    author    = {{Amazon Web Services}},
-    title     = {What is {RAG}? – Retrieval-augmented generation explained},
-    url       = {https://aws.amazon.com/what-is/retrieval-augmented-generation/},
-    urldate   = {2025-07-31}
+  author  = {{Amazon Web Services}},
+  year    = {2025},
+  title   = {What is {RAG}? – {R}etrieval-augmented generation explained},
+  url     = {https://aws.amazon.com/what-is/retrieval-augmented-generation/},
+  urldate = {2025-07-31}
 }
 
 @online{NStarX_Inc_2025,
-    author  = {{NStarX Inc.}},
-    title   = {{The \$2.5 million question: Why data quality makes or breaks your enterprise RAG system}},
-    url     = {https://nstarxinc.com/blog/the-2-5-million-question-why-data-quality-makes-or-breaks-your-enterprise-rag-system/},
-    urldate = {2025-08-05}
+  author  = {{NStarX Inc.}},
+  year    = {2025},
+  title   = {{The \$2.5 million question}: Why data quality makes or breaks your enterprise {RAG} system},
+  url     = {https://nstarxinc.com/blog/the-2-5-million-question-why-data-quality-makes-or-breaks-your-enterprise-rag-system/},
+  urldate = {2025-08-05}
 }
 
 @online{GoogleGenAIEvaluation,
-    author  = {{Google Cloud}},
-    title   = {Generative {AI} model evaluation overview},
-    url     = {https://cloud.google.com/vertex-ai/generative-ai/docs/models/evaluation-overview},
-    urldate = {2025-08-05}
+  author  = {{Google Cloud}},
+  year    = {2025},
+  title   = {Generative {AI} model evaluation overview},
+  url     = {https://cloud.google.com/vertex-ai/generative-ai/docs/models/evaluation-overview},
+  urldate = {2025-08-05}
 }
 
 @online{GoogleAnalytics,
-    author  = {{Google for Developers}},
-    title   = {Google {Analytics} 4},
-    url     = {https://developers.google.com/analytics/devguides/collection/ga4},
-    urldate = {2025-08-05}
+  author  = {{Google for Developers}},
+  year    = {2025},
+  title   = {Google {Analytics} 4},
+  url     = {https://developers.google.com/analytics/devguides/collection/ga4},
+  urldate = {2025-08-05}
 }
 
 @online{GoogleCloudDocumentation,
-    author  = {{Google Cloud}},
-    title   = {Google Cloud Documentation},
-    url     = {https://cloud.google.com/docs},
-    urldate = {2025-08-05}
+  author  = {{Google Cloud}},
+  year    = {2025},
+  title   = {Google Cloud Documentation},
+  url     = {https://cloud.google.com/docs},
+  urldate = {2025-08-05}
 }
 
 @online{GoogleVertexAISearch,
-    author  = {{Google Cloud}},
-    title   = {Introduction to Vertex {AI} Search},
-    url     = {https://cloud.google.com/generative-ai-app-builder/docs/introduction\#es-and-personalize},
-    urldate = {2025-08-05}
+  author  = {{Google Cloud}},
+  year    = {2025},
+  title   = {Introduction to Vertex {AI} Search},
+  url     = {https://cloud.google.com/generative-ai-app-builder/docs/introduction#es-and-personalize},
+  urldate = {2025-08-05}
 }
 
 @online{GoogleReranker,
-    author  = {{Google Cloud}},
-    title   = {Rank and rerank records},
-    url     = {https://cloud.google.com/generative-ai-app-builder/docs/ranking\#rank\_or\_rerank\_a\_set\_of\_records\_according\_to\_a\_query},
-    urldate = {2025-08-05}
+  author  = {{Google Cloud}},
+  year    = {2025},
+  title   = {Rank and rerank records},
+  url     = {https://cloud.google.com/generative-ai-app-builder/docs/ranking#rank_or_rerank_a_set_of_records_according_to_a_query},
+  urldate = {2025-08-05}
 }
 
 @online{LangChain,
-    author  = {{LangChain}},
-    title   = {LangChain},
-    url     = {https://www.langchain.com/},
-    urldate = {2025-08-05}
+  author  = {{LangChain}},
+  year    = {2025},
+  title   = {LangChain},
+  url     = {https://www.langchain.com/},
+  urldate = {2025-08-05}
 }
 
 @online{GoogleGemini,
-    author  = {{Google for Developers}},
-    title   = {Gemini {API} models},
-    url     = {https://ai.google.dev/gemini-api/docs/models},
-    urldate = {2025-08-05}
+  author  = {{Google for Developers}},
+  year    = {2025},
+  title   = {Gemini {API} models},
+  url     = {https://ai.google.dev/gemini-api/docs/models},
+  urldate = {2025-08-05}
 }
 
 @article{Setty2024,
-    author  = {Setty, Spurthi and Thakkar, Harsh and Lee, Alyssa and Chung, Eden and Vidra, Natan},
-    title   = {Improving retrieval for {RAG} based question answering models on financial documents},
-    journal = {arXiv preprint arXiv:2404.07221},
-    year    = {2024}
+  author  = {Setty, S. and Thakkar, H. and Lee, A. and Chung, E. and Vidra, N.},
+  title   = {Improving retrieval for {RAG} based question answering models on financial documents},
+  journal = {arXiv preprint arXiv:2404.07221},
+  year    = {2024}
 }
 
 @online{GoogleBigQuery,
-    author  = {{Google Cloud}},
-    title   = {What is BigQuery?},
-    url     = {https://cloud.google.com/bigquery/docs},
-    urldate = {2025-08-05}
+  author  = {{Google Cloud}},
+  year    = {2025},
+  title   = {What is BigQuery?},
+  url     = {https://cloud.google.com/bigquery/docs},
+  urldate = {2025-08-05}
 }
 
 @online{GoogleCloudRunService,
-    author  = {{Google Cloud}},
-    title   = {What is Cloud Run?},
-    url     = {https://cloud.google.com/run/docs/overview/what-is-cloud-run\#cloud\_run\_services},
-    urldate = {2025-08-05}
+  author  = {{Google Cloud}},
+  year    = {2025},
+  title   = {What is Cloud Run?},
+  url     = {https://cloud.google.com/run/docs/overview/what-is-cloud-run#cloud_run_services},
+  urldate = {2025-08-05}
 }
 
-@online{DSGVO_2024,
-    title   = {Datenschutz-Grundverordnung ({DSGVO})},
-    year    = {2024},
-    url     = {https://dsgvo-gesetz.de/},
-    urldate = {2025-08-05}
+@misc{GDPR_2016,
+  author    = {{European Parliament and the Council of the European Union}},
+  year      = {2016},
+  title     = {Regulation ({EU}) 2016/679 of the European Parliament and of the Council of 27 April 2016 on the protection of natural persons with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC ({G}eneral {D}ata protection {R}egulation)},
+  publisher = {Official Journal of the European Union},
+  url       = {http://data.europa.eu/eli/reg/2016/679/oj}
 }
 
 @online{GoogleEmbedding001,
-    author  = {{Google for Developers}},
-    title   = {Embeddings with the Gemini {API}},
-    url     = {https://ai.google.dev/gemini-api/docs/embeddings},
-    urldate = {2025-08-05}
+  author  = {{Google for Developers}},
+  year    = {2025},
+  title   = {Embeddings with the Gemini {API}},
+  url     = {https://ai.google.dev/gemini-api/docs/embeddings},
+  urldate = {2025-08-05}
 }
 
 @article{Baligodugula2025,
-    author  = {Baligodugula, Vishnu Vardhan and Amsaad, Fathi},
-    month   = {jul},
-    title   = {Unsupervised learning: Comparative analysis of clustering techniques on high-dimensional data},
-    journal = {arXiv preprint arXiv:2503.23215},
-    year    = {2025}
+  author  = {Baligodugula, V. V. and Amsaad, F.},
+  month   = {jul},
+  title   = {Unsupervised learning: Comparative analysis of clustering techniques on high-dimensional data},
+  journal = {arXiv preprint arXiv:2503.23215},
+  year    = {2025}
 }
 
 @article{McInnes2020,
-    author  = {McInnes, Leland and Healy, John and Melville, James},
-    title   = {{UMAP}: Uniform manifold approximation and projection for dimension reduction},
-    journal = {arXiv preprint arXiv:1802.03426},
-    year    = {2020}
+  author  = {McInnes, L. and Healy, J. and Melville, J.},
+  title   = {{UMAP}: Uniform manifold approximation and projection for dimension reduction},
+  journal = {arXiv preprint arXiv:1802.03426},
+  year    = {2020}
 }
 
 @online{GoogleGeminiPricing,
-    author  = {{Google for Developers}},
-    title   = {Gemini {API} pricing},
-    url     = {https://ai.google.dev/gemini-api/docs/pricing},
-    urldate = {2025-08-05}
+  author  = {{Google for Developers}},
+  year    = {2025},
+  title   = {Gemini {API} pricing},
+  url     = {https://ai.google.dev/gemini-api/docs/pricing},
+  urldate = {2025-08-05}
 }
 
 @article{Peffers2007,
-    author  = {Peffers, Ken and Tuunanen, Tuure and Rothenberger, Marcus A. and Chatterjee, Samir},
-    title   = {A design science research methodology for information systems research},
-    journal = {Journal of Management Information Systems},
-    year    = {2007},
-    volume  = {24},
-    number  = {3},
-    pages   = {45--77},
-    doi     = {10.2753/MIS0742-1222240302}
+  author  = {Peffers, K. and Tuunanen, T. and Rothenberger, M. A. and Chatterjee, S.},
+  title   = {A design science research methodology for information systems research},
+  journal = {Journal of Management Information Systems},
+  year    = {2007},
+  volume  = {24},
+  number  = {3},
+  pages   = {45--77},
+  doi     = {10.2753/MIS0742-1222240302}
 }
 
 @article{Ammann2025,
-    author = {Paul J. L. Ammann and Jonas Golde and Alan Akbik},
-    month = {7},
-    title = {Question Decomposition for Retrieval-Augmented Generation},
-    url = {http://arxiv.org/abs/2507.00355},
-    year = {2025}
+  author = {Ammann, P. J. L. and Golde, J. and Akbik, A.},
+  month  = {jul},
+  title  = {Question Decomposition for {Retrieval-Augmented} Generation},
+  url    = {http://arxiv.org/abs/2507.00355},
+  year   = {2025}
 }
 
-@article{Huimin,
-    author = {Huimin, Zhang and Ahmad, Abdul and Abdul Kadir, Mohd Razilan},
-    year = {2024},
-    month = {06},
-    pages = {},
-    title = {The Impact of MOOC Platform Quality on the Independent Learning Ability of Higher Education Students: A Critical Review of the Literature},
-    volume = {14},
-    journal = {International Journal of Academic Research in Business and Social Sciences},
-    doi = {10.6007/IJARBSS/v14-i6/21737}
+@article{Zhang2024,
+  author  = {Zhang, H. and Ahmad, A. and Abdul Kadir, M. R.},
+  year    = {2024},
+  month   = {jun},
+  title   = {The Impact of {MOOC} Platform Quality on the Independent Learning Ability of Higher Education Students: {A} Critical Review of the Literature},
+  volume  = {14},
+  journal = {International Journal of Academic Research in Business and Social Sciences},
+  doi     = {10.6007/IJARBSS/v14-i6/21737}
 }
+
 @article{Naveed2024,
-    month = {10},
-    title = {A Comprehensive Overview of Large Language Models},
-    url = {http://arxiv.org/abs/2307.06435},
-    year = {2024}
+  author = {Naveed, H. and Khan, A. U. and Qiu, S. and Saqib, M. and Anwar, S. and Usman, M. and Akhtar, N. and Barnes, N. and Mian, A.},
+  month  = {oct},
+  title  = {A Comprehensive Overview of Large Language Models},
+  url    = {http://arxiv.org/abs/2307.06435},
+  year   = {2024}
 }
 
 @online{vuejs,
-  author = {Evan You},
-  title = {Vue.js - The Progressive JavaScript Framework},
-  year = {2014-2025},
-  url = {https://vuejs.org/},
+  author  = {You, E.},
+  title   = {Vue.js - The Progressive JavaScript Framework},
+  year    = {2025},
+  url     = {https://vuejs.org/},
   urldate = {2025-08-07}
 }
 
 @online{googlecloudscheduler,
-  author = {Google Cloud},
-  title = {About Cloud Scheduler | Cloud Scheduler Documentation - Google Cloud},
-  year = {2025},
-  url = {https://cloud.google.com/scheduler/docs/overview},
+  author  = {{Google Cloud}},
+  title   = {About Cloud Scheduler | Cloud Scheduler Documentation - Google Cloud},
+  year    = {2025},
+  url     = {https://cloud.google.com/scheduler/docs/overview},
   urldate = {2025-08-07}
 }
 
 @online{apache_echarts,
-  author = {{The Apache Software Foundation}},
-  title = {Apache ECharts},
-  year = {2017-2025},
-  url = {https://echarts.apache.org/en/index.html},
+  author  = {{The Apache Software Foundation}},
+  title   = {Apache ECharts},
+  year    = {2025},
+  url     = {https://echarts.apache.org/en/index.html},
   urldate = {2025-08-07}
 }
 
 @article{Malzer2021,
-    author = {Claudia Malzer and Marcus Baum},
-    doi = {10.1109/MFI49285.2020.9235263},
-    month = {1},
-    title = {A Hybrid Approach To Hierarchical Density-based Cluster Selection},
-    url = {http://arxiv.org/abs/1911.02282 http://dx.doi.org/10.1109/MFI49285.2020.9235263},
-    year = {2021}
-}
-
-@online{icon1,
-  title        = {Cloud Scheduler SVG Vector},
-  organization = {SVG Repo},
-  url          = {https://www.svgrepo.com/svg/375384/cloud-scheduler},
-  urldate      = {2025-08-08}
-}
-
-@online{icon2,
-  title        = {Google BigQuery Logo},
-  organization = {Worldvectorlogo},
-  url          = {https://worldvectorlogo.com/logo/google-bigquery-logo-1},
-  urldate      = {2025-08-08}
-}
-
-@online{icon3,
-  title        = {User SVG Vector},
-  organization = {SVG Repo},
-  url          = {https://www.svgrepo.com/svg/535711/user},
-  urldate      = {2025-08-08}
-}
-
-@online{icon4,
-  title        = {Google Cloud Run SVG Vector},
-  organization = {SVG Repo},
-  url          = {https://www.svgrepo.com/svg/353807/google-cloud-run},
-  urldate      = {2025-08-08}
-}
-
-@online{icon5,
-  title        = {Vue.js Icon},
-  organization = {TechIcons},
-  url          = {https://techicons.dev/icons/vuejs},
-  urldate      = {2025-08-08}
+  author = {Malzer, C. and Baum, M.},
+  doi    = {10.1109/MFI49285.2020.9235263},
+  month  = {jan},
+  title  = {A Hybrid Approach To Hierarchical {Density-based} Cluster Selection},
+  url    = {http://arxiv.org/abs/1911.02282},
+  year   = {2021}
 }
