--- a/thesis.tex
+++ b/thesis.tex
@@ -65,7 +65,7 @@
 \usepackage[style=authoryear-ibid,backend=biber]{biblatex}
 \DeclareLanguageMapping{english}{english-apa}
 \bibliography{references}
-\AtBeginBibliography{\setcounter{maxnames}{10}} % Im Literaturverzeichnis nenne mehr als 2 Autoren
+\AtBeginBibliography{\setcounter{maxnames}{50}} % Im Literaturverzeichnis nenne mehr als 2 Autoren
 \counterwithout{footnote}{chapter} % Zähle Fußnoten über gesamtes Dokument hoch
 
 %%%%%%%%%%%%%%%%%%%
@@ -242,7 +242,6 @@ AI & Artificial Intelligence\\
 API & Application Programming Interface\\
 ARES & Automatic RAG Evaluation and Scoring \\
 DSR & Design Science Research\\
-DSGVO & Datenschutz-Grundverordnung (General Data Protection Regulation)\\
 GCP & Google Cloud Platform\\
 GDP & Gross Domestic Product\\
 GDPR & General Data Protection Regulation\\
@@ -280,9 +279,9 @@ UMAP & Uniform Manifold Approximation and Projection\\
 \chapter{Introduction}
 ChatGPT reached 1 million users within 5 days after its launch in 2022 which was only exceeded by Threads in 2023 \parencite{Brandt2023}. Today ChatGPT provides benefits for 800 million weekly users \parencite{Huber2025} and thus has become an established Generative AI (GenAI) tool. GenAI bares high potential not only for the private sector but also for the modern business world. Projections underscore this, suggesting that GenAI could increase Germany's GDP by up to €585 billion by 2040 \parencite[p.~12]{McKinsey2023}. Furthermore for enterprise applications, \textbf{Retrieval-Augmented Generation (RAG)} has emerged as a particularly suitable technology by connecting large language models (LLMs) to company-specific proprietary knowledge bases  \parencite[p.~9459]{Lewis2020}. Connecting and bounding LLMs to proprietary knowledge bases not only enables them to access up-to-date company data \parencite{GoogleCloudRAG} but also enhances transparency and reduces the likelihood of hallucinations, as the company data serves as the ground truth  \parencite[p.~9469]{Lewis2020}.
 
-However, the success of enterprise RAG applications typically requires some effort, including the use of specialized RAG pipelines or connecting various APIs to the RAG system, to implement them effectively \parencite[pp.~5--7]{Bruckhaus2024RAG}. Common failure points include the system failing to provide an answer even though the information is available, generating a false answer by misinterpreting context or returning an incomplete response \parencite[p.~91]{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024}. As organizations invest in and deploy these powerful but complex systems, a critical management challenge arises: How can the success of a GenAI application be measured and monitored over time? Without systematic evaluation, system administrators lack the data-driven insights needed to identify weaknesses, justify improvements, and ensure that the system delivers a positive return on investment.
+However, the success of enterprise RAG applications typically requires some effort, including the use of specialized RAG pipelines or connecting various APIs to the RAG system, to implement them effectively \parencite[pp.~5--7]{Bruckhaus2024RAG}. Common failure points include the system failing to provide an answer even though the information is available, generating a false answer by misinterpreting context or returning an incomplete response \parencite[p.~91]{Barnett2024}. As organizations invest in and deploy these powerful but complex systems, a critical management challenge arises: How can the success of a GenAI application be measured and monitored over time? Without systematic evaluation, system administrators lack the data-driven insights needed to identify weaknesses, justify improvements, and ensure that the system delivers a positive return on investment.
 
-This thesis addresses this management challenge directly. It documents the design, development, and evaluation of an analytics dashboard designed to measure the success of an enterprise GenAI application automatically. Following the Information Systems Success Model, success can be measured using three quality metrics: \textit{information quality}, \textit{system quality}, and \textit{service quality} \parencite[pp.~23--24]{DeloneMcLean2003ISSuccessTenYearUpdate}. However, most RAG evaluation frameworks like RAGAS \parencite{Es_James_Espinosa_Anke_Schockaert_2024} or ARES \parencite{Saad_Falcon_Khattab_Potts_Zaharia_2024} only include the information quality provided by the system. To move beyond this narrow perspective on IS success, this study employs a Design Science Research methodology following \cite{Peffers2007} to conceptualize and implement a dashboard based on a more holistic perspective.
+This thesis addresses this management challenge directly. It documents the design, development, and evaluation of an analytics dashboard designed to measure the success of an enterprise GenAI application automatically. Following the Information Systems Success Model, success can be measured using three quality metrics: \textit{information quality}, \textit{system quality}, and \textit{service quality} \parencite[pp.~23--24]{DeloneMcLean2003ISSuccessTenYearUpdate}. However, most RAG evaluation frameworks like RAGAS \parencite{Es2024} or ARES \parencite{Saad-Falcon2024} only include the information quality provided by the system. To move beyond this narrow perspective on IS success, this study employs a Design Science Research methodology following \cite{Peffers2007} to conceptualize and implement a dashboard based on a more holistic perspective.
 % --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  -- %
 % --  --  --  --  --  --  --  --  --  --  Theoretical Background  --  --  --  --  -- %
 % --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  -- %
@@ -337,7 +336,7 @@ The \textit{service quality} dimension determines if users of the KMS are provid
 All three dimensions - the \textit{system quality}, \textit{knowledge quality} and the \textit{service quality} influence similar to the original ISSM the \textit{Intention to use} as well as the \textit{User Satisfaction} and cause a \textit{net benefit} in the end \parencite[p.~56]{Jennex2006}. The KMS success model makes a small difference by replacing the actual usage with \textit{perceived benefit} to highlight the importance of the distinction between mandatory and voluntary use \parencite[p.~55]{Jennex2006}.
 \section{Generative AI Systems in organizations}
 Since we now know what determines the success of KMS in organizations like enterprises, we are going to have a closer look at the GenAI systems that are used to support KM in an organization, find out what they are used for and which factors define their quality.\\
-AI in general is hard to define. For now we will follow the definition by Marvin Minsky and define Artificial Intelligence as "the science of making machines do things that would require intelligence if done by men" \parencite{minsky:original} as cited in \parencite{dennis:2025}. In other words, AI systems are systems that show some form of intelligent behavior similar to human intelligence. Machine learning (ML) is a subfield of AI and describes the analysis of huge amounts of data \parencite[p.~573]{Lund2023}. Neural networks are models used in ML to perform this analysis. They imitate the human brain by using interconnected layers of artificial neurons (or nodes) to process information \parencite[p.~573]{Lund2023}. Generative AI (GenAI) is one kind of ML model approach that uses neural networks with a vast number of layers to generate new data based on training data \parencite[p.~574]{Lund2023}.
+AI in general is hard to define. For now we will follow the definition by Marvin Minsky and define Artificial Intelligence as "the science of making machines do things that would require intelligence if done by men" \parencite{Minsky1966} as cited in \parencite{Dennis2025}. In other words, AI systems are systems that show some form of intelligent behavior similar to human intelligence. Machine learning (ML) is a subfield of AI and describes the analysis of huge amounts of data \parencite[p.~573]{Lund2023}. Neural networks are models used in ML to perform this analysis. They imitate the human brain by using interconnected layers of artificial neurons (or nodes) to process information \parencite[p.~573]{Lund2023}. Generative AI (GenAI) is one kind of ML model approach that uses neural networks with a vast number of layers to generate new data based on training data \parencite[p.~574]{Lund2023}.
 Large Language Models are one flavor of GenAI models. These models are trained on huge amounts of data and are capable of many text-processing tasks \parencite[p.~2]{Naveed2024}. The workflow using these LLMs is as follows: A user submits a request, known as a prompt, to the LLM, and the LLM generates a response based on its training data and the prompt \parencite[p.~575]{Lund2023}.\\
 The GenAI system we will focus on throughout this thesis is a retrieval-augmented generation (RAG) system. These systems utilize external data sources like web pages, other organizational KMS, or third-party sources through retrieval algorithms \parencite{AWS_RAG}. The retrieved context is then passed alongside the user's query to a large language model (LLM) that generates an answer grounded on the retrieved knowledge. Such RAG systems can be used for open-domain question answering and can be used for knowledge work in an organization as they make (proprietary) knowledge available to an LLM \parencite[p.~9459]{Lewis2020}.\\
 \subsection{Advantages of RAG systems for organizational KM}
@@ -347,7 +346,7 @@ Since RAG systems can query various data sources at once \parencite{GoogleCloudR
 \subsection{Challenges for RAG systems in organizations}
 However, realizing the full potential of RAG systems in an enterprise context requires significant effort. Enterprises typically have high requirements concerning not only the output quality but also compliance regulations, the integration of various data sources, and other factors. In the following analysis, we will examine some of the issues encountered in RAG systems used in enterprises and assign them to the quality dimensions of the ISSM. \\
 A formal taxonomy of failure points for a RAG system, created based on three case studies, highlights seven distinct issue types related to \textit{Information quality} \parencite[p.~91]{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024}. These challenges range from fundamental data gaps, where the required information is simply missing from the knowledge base, to retrieval failures where required documents are not ranked highly enough by the retrieval algorithm or are lost during context consolidation. Further down the pipeline, the Large Language Model (LLM) might fail to extract the correct answer from the provided context. Finally, even if factually correct, the generated answer may have the wrong format, an incorrect level of specificity, or be incomplete, failing to fully satisfy the user's query.\\
-Three other case studies demonstrate these theoretical \textit{Information quality} related issues in the real world too. In a 2023 case study, a RAG system implemented in a major healthcare organization began to produce a series of potentially harmful treatment suggestions that contradicted current medical standards. This occurred because its knowledge base contained outdated medical guidelines, inconsistent drug interaction databases, and incomplete patient history records \parencite{NStarX_Inc._2025}. This case highlighted the direct risks to patient safety. In another example, an investment firm's RAG system provided contradictory advice on securities regulations, potentially leading to compliance violations. An investigation found the knowledge base contained regulatory documents from multiple jurisdictions without proper geographic tagging, superseded regulations that had not been archived, and inconsistent interpretations of the same rule. The firm faced potential regulatory scrutiny and was forced to suspend the system, resulting in millions of dollars in lost productivity and increased manual oversight \parencite{NStarX_Inc._2025}. Similarly, a telecommunications chatbot began providing customers with incorrect billing information and outdated service plans. The root cause was traced to duplicate customer records, outdated product catalogs with discontinued services, and inconsistent pricing data across regional databases. \parencite{NStarX_Inc._2025}\\
+Three other case studies demonstrate these theoretical \textit{Information quality} related issues in the real world too. In a 2023 case study, a RAG system implemented in a major healthcare organization began to produce a series of potentially harmful treatment suggestions that contradicted current medical standards. This occurred because its knowledge base contained outdated medical guidelines, inconsistent drug interaction databases, and incomplete patient history records \parencite{NStarX_Inc_2025}}. This case highlighted the direct risks to patient safety. In another example, an investment firm's RAG system provided contradictory advice on securities regulations, potentially leading to compliance violations. An investigation found the knowledge base contained regulatory documents from multiple jurisdictions without proper geographic tagging, superseded regulations that had not been archived, and inconsistent interpretations of the same rule. The firm faced potential regulatory scrutiny and was forced to suspend the system, resulting in millions of dollars in lost productivity and increased manual oversight \parencite{NStarX_Inc._2025}. Similarly, a telecommunications chatbot began providing customers with incorrect billing information and outdated service plans. The root cause was traced to duplicate customer records, outdated product catalogs with discontinued services, and inconsistent pricing data across regional databases. \parencite{NStarX_Inc._2025}\\
 Another study highlights five key challenges that RAG systems face, especially in compliance-regulated enterprise environments \parencite[p.~6]{Bruckhaus2024RAG}.\\
 The first of these is maintaining accuracy, consistency, and explainability \parencite[p.~6]{Bruckhaus2024RAG}. Given that RAG outputs in sectors such as finance or healthcare can carry legal or financial weight, they require a higher level of trustworthiness and accuracy. Furthermore, the systems must be able to explain how retrieved documents influence the final generated content and provide confidence scores to help users assess the reliability of the output.\\
 Secondly, data security, privacy, and compliance are critical \parencite[p.~6]{Bruckhaus2024RAG}. Enterprises must ensure their RAG systems comply with strict regulations, such as HIPAA or GDPR, which require robust data encryption, access controls, and detailed audit trails to prevent the unauthorized disclosure of sensitive information.\\
@@ -564,12 +563,12 @@ The tracking system supports the recording of the following interaction types:
 \end{itemize}
 To maintain the context of a conversation, interactions belonging to a chat or thread within a Use Case are also tracked. In BigQuery, the chat is recorded as a "SessionChat" and the thread is recorded as a "Session". This structure makes it possible to determine which interactions were triggered within the same chat or thread.
 
-For compliance with GDPR (DSGVO) \parencite{DSGVO_2024} regulations, these chats and threads are pseudonymized. This means that pseudonymized IDs are used to prevent a chat or thread from being linked back to a specific user, removing the possibility of subsequent re-identification. Furthermore, a table was created containing a justification for why the recording is necessary for every single data point that is tracked to make the tracking system GDPR compliant (see Table \ref{tab:gdpr_compliance_en} in the appendix).
+For compliance with GDPR \parencite{GDPR_2016} regulations, these chats and threads are pseudonymized. This means that pseudonymized IDs are used to prevent a chat or thread from being linked back to a specific user, removing the possibility of subsequent re-identification. Furthermore, a table was created containing a justification for why the recording is necessary for every single data point that is tracked to make the tracking system GDPR compliant (see Table \ref{tab:gdpr_compliance_en} in the appendix).
 \subsection{Data flow and data preprocessing}
 \begin{figure}
     \centering
     \includegraphics[width=1\linewidth]{images/DataFlow_Bachelorthesis.drawio.png}
-    \caption{Dataflow, Icons from \parencite{icon1, icon2, icon3, icon4, icon5}}
+    \caption{Dataflow, for reference to the used icons see section \ref{section:image_credits} in the appendix}
     \label{fig:enter-label}
 \end{figure}
 The data flow for the dashboard system, as illustrated in the preceding diagram, can be broken down into three primary processes:
@@ -1581,7 +1580,29 @@ The detailed scores and original comments are listed in the following tables.
     \midrule
     10 & Developer & \textbf{Overall Value (4/5):} \textbf{Requests:} Mehr Informationen für die Diagramme, mehr Handlungsempfehlungen für die Nutzer, mehr Information über die Berechnungen und Ermittlungen der Werte und wie man sie interpretieren muss. \textbf{Additional Comments:} Schön gestaltet, gutes Layout, übersichtlich. \\
 \end{longtable}
+\chapter*{Image Credits}\label{section:image_credits}
+\addcontentsline{toc}{chapter}{Image Credits} % Optional: Adds this section to the Table of Contents
 
+The following icons have been used in diagrams in the thesis:
+
+\begin{itemize}
+    \item From \textbf{SVG Repo}:
+    \begin{itemize}
+        \item Cloud Scheduler SVG Vector: \url{https://www.svgrepo.com/svg/375384/cloud-scheduler}
+        \item User SVG Vector: \url{https://www.svgrepo.com/svg/535711/user}
+        \item Google Cloud Run SVG Vector: \url{https://www.svgrepo.com/svg/353807/google-cloud-run}
+    \end{itemize}
+    
+    \item From \textbf{Worldvectorlogo}:
+    \begin{itemize}
+        \item Google BigQuery Logo: \url{https://worldvectorlogo.com/logo/google-bigquery-logo-1}
+    \end{itemize}
+
+    \item From \textbf{TechIcons}:
+    \begin{itemize}
+        \item Vue.js Icon: \url{https://techicons.dev/icons/vuejs}
+    \end{itemize}
+\end{itemize}
 \printbibliography
 \newpage
 \mbox{}
