Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -568,7 +568,7 @@ For compliance with GDPR \parencite{GDPR_2016} regulations, these chats and thre
 \begin{figure}
     \centering
     \includegraphics[width=1\linewidth]{images/DataFlow_Bachelorthesis.drawio.png}
-    \caption{Dataflow, for reference to the used icons see section \ref{section:image_credits} in the appendix}
+    \caption{Dataflow, for reference to the used icons see in the Image Credits section \ref{section:image_credits} in the appendix}
     \label{fig:enter-label}
 \end{figure}
 The data flow for the dashboard system, as illustrated in the preceding diagram, can be broken down into three primary processes:
