Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -49,6 +49,16 @@
   url     = {https://www.mckinsey.com/de/~/media/mckinsey/locations/europe%20and%20middle%20east/deutschland/news/presse/2023/2023-11-24%20genai%20implikationen%20deutschlands%20arbeitsmarkt/en_mckinsey_genai_implications_germany_labor_market.pdf}
 }
 
+@book{Ma2004,
+  author    = {Ma, Q. and Liu, L.},
+  year      = {2004},
+  title     = {The Technology Acceptance Model},
+  booktitle = {Advanced Topics in Global Information Management, Volume 3},
+  editor    = {Hunter, M. G. and Tan, F. B.},
+  publisher = {Idea Group Publishing},
+  doi       = {10.4018/978-1-59140-221-3.ch006}
+}
+
 @online{GoogleCloudRAG,
   author  = {{Google Cloud}},
   year    = {2025},
