--- a/thesis.tex
+++ b/thesis.tex
@@ -291,7 +291,7 @@ In order to gain a deeper understanding of what determines the success of an ent
 To better understand the success of IS we will have a look at two models. The technology acceptance model (TAM) \parencite{Davis1989} deals with the question, which determinants lead to the acceptance and use of an IS by a single user, whereas the IS success model \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} focuses on the success of an IS in an organizational context.
 \begin{figure}[h!]
     \includegraphics[width=1\linewidth]{images/TAM.png}
-    \caption{Technology acceptance model by \parencite{Davis1989} as in \parencite[p.~1589]{Huimin}}
+    \caption{Technology acceptance model by \parencite{Davis1989} as in \parencite[p.~61]{Ma2004}}
     \label{fig:enter-label}
 \end{figure}
 \\
