Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -50,13 +50,14 @@
 }
 
 @book{Ma2004,
-  author    = {Ma, Q. and Liu, L.},
-  year      = {2004},
-  title     = {The Technology Acceptance Model},
-  booktitle = {Advanced Topics in Global Information Management, Volume 3},
-  editor    = {Hunter, M. G. and Tan, F. B.},
-  publisher = {Idea Group Publishing},
-  doi       = {10.4018/978-1-59140-221-3.ch006}
+    author    = {Ma, Q. and Liu, L.},
+    year      = {2004},
+    title     = {The Technology Acceptance Model},
+    booktitle = {Advanced Topics in Global Information Management, Volume 3},
+    editor    = {Hunter, M. G. and Tan, F. B.},
+    publisher = {Idea Group Publishing},
+    doi       = {10.4018/978-1-59140-221-3.ch006},
+    page     = {59--72}
 }
 
 @online{GoogleCloudRAG,
