Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -41,6 +41,14 @@
   urldate   = {2025-07-31}
 }
 
+@online{RagasMetrics,
+  author  = {{Ragas}},
+  year    = {2025},
+  title   = {Available Metrics},
+  url     = {https://docs.ragas.io/en/stable/concepts/metrics/available_metrics/},
+  urldate = {2025-08-09}
+}
+
 @online{McKinsey2023,
   author  = {{McKinsey \& Company}},
   year    = {2023},
@@ -57,7 +65,7 @@
     editor    = {Hunter, M. G. and Tan, F. B.},
     publisher = {Idea Group Publishing},
     doi       = {10.4018/978-1-59140-221-3.ch006},
-    page     = {59--72}
+    pages     = {59--72}
 }
 
 @online{GoogleCloudRAG,
