--- a/thesis.tex
+++ b/thesis.tex
@@ -754,25 +754,28 @@ In conclusion, this work delivered a solid foundation for GenAI success measurem
 
 \section*{Statement on the use of AI for the creation of this thesis}
 This paper was written independently and its language was revised with the assistance of Gemini and Grammarly. Cursor was used as a coding assistant during the artifact development.
+\newpage
 \section*{Workshop Feedback}
 \subsection*{Group 1}
-\begin{sidewaystable}
-    \centering
-    \small 
-    \caption{Workshop feedback on System Quality Metrics}
-    \label{tab:system_quality}
-    \begin{tabularx}{\textheight}{p{2.2cm} l >{\RaggedRight\arraybackslash}X l >{\RaggedRight\arraybackslash}X >{\RaggedRight\arraybackslash}X >{\RaggedRight\arraybackslash}X}
-        \toprule
-        \textbf{Category} & \textbf{\#} & \textbf{Name} & \textbf{Priority} & \textbf{What do you like?} & \textbf{What should be changed?} & \textbf{Which difficulties do you see regarding the implementation?} \\
-        \midrule
-        
-        \multirow{2}{=}{System quality} 
-        & 1 & Response Times & Medium & & & \\
-        \cmidrule(l){2-7}
-        & 2 & Error Rates & High & Errors will stop the user from using the wingman and there is a risk the user loses his interests in wingman. & & \\
-        \bottomrule
-    \end{tabularx}
-\end{sidewaystable}
+\begin{sideways}
+    \begin{minipage}{\textheight}
+        \centering
+        \small 
+        \captionof{table}{Workshop feedback on System Quality Metrics}
+        \label{tab:system_quality}
+        \begin{tabularx}{\linewidth}{p{2.2cm} l >{\RaggedRight\arraybackslash}X l >{\RaggedRight\arraybackslash}X >{\RaggedRight\arraybackslash}X >{\RaggedRight\arraybackslash}X}
+            \toprule
+            \textbf{Category} & \textbf{\#} & \textbf{Name} & \textbf{Priority} & \textbf{What do you like?} & \textbf{What should be changed?} & \textbf{Which difficulties do you see regarding the implementation?} \\
+            \midrule
+            
+            \multirow{2}{=}{System quality} 
+            & 1 & Response Times & Medium & & & \\
+            \cmidrule(l){2-7}
+            & 2 & Error Rates & High & Errors will stop the user from using the wingman and there is a risk the user loses his interests in wingman. & & \\
+            \bottomrule
+        \end{tabularx}
+    \end{minipage}
+\end{sideways}
 
 \begin{sidewaystable}
     \centering
@@ -861,26 +864,28 @@ This paper was written independently and its language was revised with the assis
     \end{tabularx}
 \end{sidewaystable}
 
-\clearpage % This command forces all the tables above to be printed before continuing.
+\newpage
 
 \subsection*{Group 2}
-\begin{sidewaystable}
-    \centering
-    \small 
-    \caption{Workshop feedback on System Quality Metrics (Group 2 Feedback)}
-    \label{tab:system_quality_g2}
-    \begin{tabularx}{\textheight}{p{2.2cm} l >{\RaggedRight\arraybackslash}X l >{\RaggedRight\arraybackslash}X >{\RaggedRight\arraybackslash}X >{\RaggedRight\arraybackslash}X}
-        \toprule
-        \textbf{Category} & \textbf{\#} & \textbf{Name} & \textbf{Priority} & \textbf{What do you like?} & \textbf{What should be changed?} & \textbf{Which difficulties do you see regarding the implementation?} \\
-        \midrule
-        
-        \multirow{2}{=}{System quality} 
-        & 1 & Response Times & Medium & Not that interesting but easy to measure; we assume they do not vary that much. & & \\
-        \cmidrule(l){2-7}
-        & 2 & Error Rates & Medium & Leads to faster error diagnosis. & Should probably only be a view for us as the dev team and not visible to customers. & \\
-        \bottomrule
-    \end{tabularx}
-\end{sidewaystable}
+\begin{sideways}
+    \begin{minipage}{\textheight}
+        \centering
+        \small
+        \captionof{table}{Workshop feedback on System Quality Metrics (Group 2 Feedback)}
+        \label{tab:system_quality_g2}
+        \begin{tabularx}{\linewidth}{p{2.2cm} l >{\RaggedRight\arraybackslash}X l >{\RaggedRight\arraybackslash}X >{\RaggedRight\arraybackslash}X >{\RaggedRight\arraybackslash}X} % Hier \linewidth verwenden
+            \toprule
+            \textbf{Category} & \textbf{\#} & \textbf{Name} & \textbf{Priority} & \textbf{What do you like?} & \textbf{What should be changed?} & \textbf{Which difficulties do you see regarding the implementation?} \\
+            \midrule
+            
+            \multirow{2}{=}{System quality} 
+            & 1 & Response Times & Medium & Not that interesting but easy to measure; we assume they do not vary that much. & & \\
+            \cmidrule(l){2-7}
+            & 2 & Error Rates & Medium & Leads to faster error diagnosis. & Should probably only be a view for us as the dev team and not visible to customers. & \\
+            \bottomrule
+        \end{tabularx}
+    \end{minipage}
+\end{sideways}
 
 \begin{sidewaystable}
     \centering
